// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Directory renders properly 1`] = `
<div
  className="Directory"
  onClick={[Function]}
  onDoubleClick={[Function]}
>
  <span
    className="icon"
    onClick={[Function]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f07b",
            "M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z",
          ],
          "iconName": "folder",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
  </span>
  <span
    className="name"
  >
    Test Directory
  </span>
</div>
`;

exports[`Directory when \`active\` is received from the props renders properly 1`] = `
<div
  className="Directory active"
  onClick={[Function]}
  onDoubleClick={[Function]}
>
  <span
    className="icon"
    onClick={[Function]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f07b",
            "M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z",
          ],
          "iconName": "folder",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
  </span>
  <span
    className="name"
  >
    Test Directory
  </span>
</div>
`;
